operator/pkg/model/ingestion/testdata/gateway/tls_route_parent_ref_filter/input-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  creationTimestamp: null
  name: my-gateway
  namespace: default
spec:
  gatewayClassName: ""
  listeners:
  - hostname: example.com
    name: tls-443
    port: 443
    protocol: TLS
    tls:
      mode: Passthrough
  - hostname: example.com
    name: tls-8443
    port: 8443
    protocol: TLS
    tls:
      mode: Passthrough
status: {}
