operator/pkg/model/ingestion/testdata/gateway/tls_route_parent_ref_filter/output-listeners.yaml
- hostname: example.com
  mode: Passthrough
  name: tls-443
  port: 443
  routes:
  - backends:
    - name: my-service
      namespace: default
      port:
        port: 443
    hostnames:
    - example.com
  sources:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: my-gateway
    namespace: default
    version: v1
- hostname: example.com
  mode: Passthrough
  name: tls-8443
  port: 8443
  sources:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: my-gateway
    namespace: default
    version: v1
